#11565 - Navigation and mega menu - Dropdown offset 0 to fix flicker bug

--- a/Swift/Files/Templates/Designs/Swift/Assets/_src/scss/2-components/_nav.scss
+++ b/Swift/Files/Templates/Designs/Swift/Assets/_src/scss/2-components/_nav.scss
@@ -4,17 +4,6 @@
 		padding: 0;
 	}
 
-	.dropdown-toggle:hover {
-		position: relative;
-
-		&::before {
-			content: "";
-			position: absolute;
-			inset: 0;
-			margin-bottom: -0.5rem;
-		}
-	}
-
 	.dropdown-toggle::after {
 		content: unset;
 	}
